Add project files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,22 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp)
-target_compile_features(main PRIVATE cxx_std_17)
-target_link_libraries(main PRIVATE SFML::Graphics SFML::Window SFML::System)
+add_executable(snake-sfml src/main.cpp)
+target_compile_features(snake-sfml PRIVATE cxx_std_17)
+target_compile_definitions(snake-sfml PRIVATE SFML_STATIC)
+target_link_libraries(snake-sfml PRIVATE 
+    SFML::Graphics 
+    SFML::Window 
+    SFML::System
+    freetype
+    opengl32
+    winmm
+    gdi32
+    ws2_32
+)
+
+add_custom_command(TARGET snake-sfml POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_SOURCE_DIR}/images $<TARGET_FILE_DIR:snake-sfml>/images
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            ${CMAKE_SOURCE_DIR}/fonts $<TARGET_FILE_DIR:snake-sfml>/fonts)
